--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -47,3 +47,6 @@ url-normalize==2.2.1
 urllib3==2.5.0
 websocket-client==1.0.0
 websockets==15.0.1
+fastapi==0.128.0
+uvicorn==0.40.0
+python-multipart==0.0.22
